--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ def includeSample() {
             'slidingmenu',
             'sample-app-lib',
             'sample-normal-app',
+            'sample-sheep-app',
             'sample-plugin-app'
     project(':sample-constant').projectDir = file('projects/sample/sample-constant')
     project(':sample-host').projectDir = file('projects/sample/sample-host')
@@ -65,4 +66,5 @@ def includeSample() {
     project(':sample-app-lib').projectDir = file('projects/sample/sample-plugin/sample-app-lib')
     project(':sample-normal-app').projectDir = file('projects/sample/sample-plugin/sample-normal-app')
     project(':sample-plugin-app').projectDir = file('projects/sample/sample-plugin/sample-plugin-app')
+    project(':sample-sheep-app').projectDir = file('projects/sample/sample-plugin/sample-sheep-app')
 }
