--- a/projects/sample/sample-plugin/sample-sheep-app/build.gradle
+++ b/projects/sample/sample-plugin/sample-sheep-app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion project.COMPILE_SDK_VERSION
+    compileSdkVersion 28
     defaultConfig {
-        applicationId project.SAMPLE_HOST_APP_APPLICATION_ID
-        minSdkVersion project.MIN_SDK_VERSION
-        targetSdkVersion project.TARGET_SDK_VERSION
-        versionCode project.VERSION_CODE
-        versionName project.VERSION_NAME
+        applicationId "com.sheepyang1993.shadowhostdemo"
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
