将sample-sheep-plugin打包插件任务配置到sample-plugin-app中以便和sample-plugin-app打包在同一个zip插件包中。否则还要改sample-host的自动解压插件包逻辑。

--- a/projects/sample/sample-plugin/sample-plugin-app/build.gradle
+++ b/projects/sample/sample-plugin/sample-plugin-app/build.gradle
@@ -39,6 +39,13 @@ shadow {
                         apkName = 'sample-plugin-app-debug.apk'
                         apkPath = 'projects/sample/sample-plugin/sample-plugin-app/build/outputs/apk/debug/sample-plugin-app-debug.apk'
                     }
+                    pluginApk2 {
+                        businessName = 'sample-sheep-plugin'
+                        partKey = 'sample-sheep-plugin'
+                        buildTask = ':sample-sheep-plugin:assembleDebug'
+                        apkName = 'sample-sheep-plugin-debug.apk'
+                        apkPath = 'projects/sample/sample-plugin/sample-sheep-plugin/build/outputs/apk/debug/sample-sheep-plugin-debug.apk'
+                    }
                 }
             }
 
@@ -52,6 +59,13 @@ shadow {
                         buildTask = ':sample-plugin-app:assembleRelease'
                         apkName = 'sample-plugin-app-release.apk'
                         apkPath = 'projects/sample/sample-plugin/sample-plugin-app/build/outputs/apk/release/sample-plugin-app-release.apk'
+                    }
+                    pluginApk2 {
+                        businessName = 'sample-sheep-plugin'
+                        partKey = 'sample-sheep-plugin'
+                        buildTask = ':sample-sheep-plugin:assembleRelease'
+                        apkName = 'sample-sheep-plugin-release.apk'
+                        apkPath = 'projects/sample/sample-plugin/sample-sheep-plugin/build/outputs/apk/release/sample-sheep-plugin-release.apk'
                     }
                 }
             }
