--- a/projects/sample/sample-plugin/sample-sheep-app/build.gradle
+++ b/projects/sample/sample-plugin/sample-sheep-app/build.gradle
@@ -1,9 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.sheepyang1993.shadowhostdemo"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
