--- a/projects/sample/sample-plugin/sample-sheep-plugin/build.gradle
+++ b/projects/sample/sample-plugin/sample-sheep-plugin/build.gradle
@@ -1,8 +1,25 @@
-apply from: "../sample-sheep-app/build.gradle"
+apply plugin: 'com.android.application'
+
 android {
+    compileSdkVersion 28
     defaultConfig {
         applicationId project.SAMPLE_HOST_APP_APPLICATION_ID
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+dependencies {
+    implementation project(':sample-sheep-app')
 }
 
 buildscript {
